# WealthManagementAI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_api.py  run_app.py  test_chat.py  test_chroma.py  test_sqlite.py
app/agents/: orchestrator.py  portfolio_agent.py  recommendation_agent.py  risk_agent.py
app/api/endpoints/: analysis.py  assessment.py  chat.py  clients.py  dashboard.py  router.py  upload.py
app/core/: chroma_db.py  config.py  llm.py  question_bank.py  sqlite_db.py
app/schemas/: chat.py  dashboard.py
app/services/: analytics.py  assessment_engine.py  chat_service.py  dashboard_service.py  file_parser.py  projection_engine.py  scoring_engine.py
frontend/: app.py
frontend/pages/: 1_Chat.py
